Fix display sizes on smaller devices for contact us section

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
           <ul class="contact-list">
             <li><i class="fas fa-map-marker-alt"></i> <span appTranslate="address">Lakeside Avenue 123</span></li>
             <li><i class="fas fa-phone-alt"></i> <span appTranslate="phone_number">+387 60 33 07 659</span></li>
-            <li><i class="fas fa-envelope"></i> lakesideluxuryapartment&#64;gmail.com</li>
+            <li><i class="fas fa-envelope"></i> <span>lakesideluxuryapartment&#64;gmail.com</span></li>
           </ul>
         </div>
         
